--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "movie-db-svelte",
 	"version": "0.0.1",
 	"private": true,
+	"type":"module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
